--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             </a>
             <div class="mt-2 sm:mt-0 sm:flex md:order-2">
                 <!-- Login Button -->
-                <a href="../login.html"><button  type="button" class="rounde mr-3 hidden border border-blue-700 py-1.5 px-6 text-center text-sm font-medium text-blue-700 focus:outline-none focus:ring-4 focus:ring-blue-300 md:inline-block rounded-lg">Login</button></a>
+                <a href="html/login.html"><button  type="button" class="rounde mr-3 hidden border border-blue-700 py-1.5 px-6 text-center text-sm font-medium text-blue-700 focus:outline-none focus:ring-4 focus:ring-blue-300 md:inline-block rounded-lg">Login</button></a>
                 <!-- Register Button -->                
-                <a href="../register.html"><button type="button" class="rounde mr-3 hidden bg-blue-700 py-1.5 px-6 text-center text-sm font-medium text-white hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300 md:mr-0 md:inline-block rounded-lg">Register</button></a>
+                <a href="html/register.html"><button type="button" class="rounde mr-3 hidden bg-blue-700 py-1.5 px-6 text-center text-sm font-medium text-white hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300 md:mr-0 md:inline-block rounded-lg">Register</button></a>
                 <button data-collapse-toggle="navbar-sticky" type="button" class="navbar-burger inline-flex items-center rounded-lg p-2 text-sm text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 md:hidden" aria-controls="navbar-sticky" aria-expanded="false">
                     <span class="sr-only">Open main menu</span>
                     <svg class="h-6 w-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
@@ -42,10 +42,10 @@
                         <a href="index.html" class="block rounded bg-blue-700 py-2 pl-3 pr-4 text-white md:bg-transparent md:p-0 md:text-blue-700" aria-current="page">Home</a>
                     </li>
                     <li>
-                        <a href="../cart.html" class="block rounded py-2 pl-3 pr-4 text-gray-700 hover:bg-gray-100 md:p-0 md:hover:bg-transparent md:hover:text-blue-700">My Cart</a>
+                        <a href="html/cart.html" class="block rounded py-2 pl-3 pr-4 text-gray-700 hover:bg-gray-100 md:p-0 md:hover:bg-transparent md:hover:text-blue-700">My Cart</a>
                     </li>
                     <li>
-                        <a href="../contact.html" class="block rounded py-2 pl-3 pr-4 text-gray-700 hover:bg-gray-100 md:p-0 md:hover:bg-transparent md:hover:text-blue-700">Contact</a>
+                        <a href="html/contact.html" class="block rounded py-2 pl-3 pr-4 text-gray-700 hover:bg-gray-100 md:p-0 md:hover:bg-transparent md:hover:text-blue-700">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -69,17 +69,17 @@
 						<a href="index.html" class="block p-4 text-lg font-semibold hover:bg-blue-50 text-blue-600 rounded" href="#">Home</a>
 					</li>
 					<li class="mb-1">
-						<a href="../cart.html" class="block p-4 text-lg font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">My Cart</a>
+						<a href="html/cart.html" class="block p-4 text-lg font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">My Cart</a>
 					</li>
 					<li class="mb-1">
-						<a href="../contact.html" class="block p-4 text-lg font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Contact</a>
+						<a href="html/contact.html" class="block p-4 text-lg font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Contact</a>
 					</li>
 				</ul>
 			</div>
 			<div class="mt-auto">
 				<div class="pt-6">
-					<a href="../login.html" class="block px-4 py-3 mb-3 leading-loose text-lg text-center font-semibold leading-none bg-gray-100 hover:bg-gray-100 rounded-xl" href="#">Login</a>
-					<a href="../register.html" class="block px-4 py-3 mb-2 leading-loose text-lg text-center text-white font-semibold bg-blue-600 hover:bg-blue-700  rounded-xl" href="#">Register</a>
+					<a href="html/login.html" class="block px-4 py-3 mb-3 leading-loose text-lg text-center font-semibold leading-none bg-gray-100 hover:bg-gray-100 rounded-xl" href="#">Login</a>
+					<a href="html/register.html" class="block px-4 py-3 mb-2 leading-loose text-lg text-center text-white font-semibold bg-blue-600 hover:bg-blue-700  rounded-xl" href="#">Register</a>
 				</div>
 			</div>
 		</nav>
